--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -137,8 +137,8 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/JoeTr/Maps
-ContentBrowserTab1.SourcesExpanded=False
+ContentBrowserTab1.SelectedPaths=
+ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
@@ -160,7 +160,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonBP/JoeTr/Maps/Forrest
+LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -389,9 +389,9 @@ RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCh
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [RootWindow]
-ScreenPosition=X=640.000 Y=334.400
-WindowSize=X=1281.600 Y=721.600
-InitiallyMaximized=True
+ScreenPosition=X=124.000 Y=67.000
+WindowSize=X=1281.000 Y=721.000
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
