--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -206,20 +206,17 @@ LastLevel=/Game/DungeonTESTLevel1
 None=======
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/GKnight/Meshes/SK_GothicKnight_Skeleton.SK_GothicKnight_Skeleton
-OpenAssetsAtExit=/Game/Evan/KeystoneImport/Player.Player
+CleanShutdown=False
 OpenAssetsAtExit=/Game/Evan/KeystoneImport/Sword.Sword
-OpenAssetsAtExit=/Game/Evan/KeystoneImport/SK_Blade_BlackKnight_Skeleton.SK_Blade_BlackKnight_Skeleton
-OpenAssetsAtExit=/Game/GKnight/Meshes/Weapon/SM_WP_GothicKnight_Sword.SM_WP_GothicKnight_Sword
+OpenAssetsAtExit=/Game/Evan/KeystoneImport/Player.Player
 
 [ContentBrowserRecent]
-MRUItem0=/Game/GKnight/Materials/Weapon/MI_GKnight_Sword
-MRUItem1=/Game/GKnight/Meshes/Weapon/SM_WP_GothicKnight_Sword
+MRUItem0=/Game/Evan/KeystoneImport/Player
+MRUItem1=/Game/DungeonTESTLevel1
 MRUItem2=/Game/Evan/KeystoneImport/Sword
-MRUItem3=/Game/Evan/KeystoneImport/SK_Blade_BlackKnight_Skeleton
-MRUItem4=/Game/Evan/KeystoneImport/Player
-MRUItem5=/Game/DungeonTESTLevel1
+MRUItem3=/Game/GKnight/Meshes/Weapon/SM_WP_GothicKnight_Sword
+MRUItem4=/Game/GKnight/Materials/Weapon/MI_GKnight_Sword
+MRUItem5=/Game/Evan/KeystoneImport/SK_Blade_BlackKnight_Skeleton
 MRUItem6=/Game/GKnight/Meshes/SK_GothicKnight_Skeleton
 MRUItem7=/Game/Evan/KeystoneImport/KnightPlayer/Sword_Idle
 MRUItem8=/Game/Evan/KeystoneImport/KnightPlayer/ThirdPersonJump_Start1
@@ -1280,6 +1277,8 @@ MaterialEditorInstanceConstant.Previewing=True
 SkeletalMeshComponent.MaterialParameters=True
 SkeletalMeshComponent.HLOD=True
 StaticMeshComponent.HLOD=True
+StaticMeshComponent.MaterialParameters=True
+StaticMeshComponent.Mobile=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode=1
@@ -1425,7 +1424,7 @@ RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDir
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[23]\" "
-Object=
+Object="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 Skeleton="\"Object.Skeleton.AssetUserData\" "
@@ -1455,10 +1454,14 @@ AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
 EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
 SkeleNoArmorAiController_C=
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" "
-ActorComponent=
+ActorComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkeletonEnemy_C="\"Object.Actor.Tags\" "
-StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" "
-StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom\" "
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [RootWindow]
 ScreenPosition=X=174.000 Y=149.000
@@ -2536,6 +2539,8 @@ MulticastInlineDelegatePropertyWrapper=PropertyWrapper.DefaultValueCategory.None
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Decal,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Tile A,MaterialEditorInstanceConstant.ParameterGroups.Tile B,MaterialEditorInstanceConstant.ParameterGroups.Tile C,MaterialEditorInstanceConstant.ParameterGroups.Tile D,
 SkeletalMeshComponent=SkeletalMeshComponent.Rendering.LOD,
 AssetViewerSettings=AssetViewerSettings.Settings.Lighting,AssetViewerSettings.Settings.Environment,AssetViewerSettings.Settings.PostProcessing,
+StaticMesh=StaticMesh.Collision.Collision,
+StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
