Made Multiple Saves/Loads, Still Adding Test Pickupables

--- a/docs/Project/KeyStone/Config/DefaultEditor.ini
+++ b/docs/Project/KeyStone/Config/DefaultEditor.ini
@@ -7,3 +7,7 @@ bReplaceBlueprintWithClass= true
 bDontLoadBlueprintOutsideEditor= true
 bBlueprintIsNotBlueprintType= true
 
+[/Script/Engine.RendererSettings]
+r.Streaming.PoolSize=2000
+r.TextureStreaming=True
+
