--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -2950,6 +2950,8 @@ Cascade.TimeStamp=2022.01.28-02.25.05
 Cascade.LastCompileMethod=Unknown
 DistCurveEditor.TimeStamp=2022.01.28-02.25.06
 DistCurveEditor.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2021.12.22-21.56.38
+TextureEditor.LastCompileMethod=Unknown
 
 [MessageLog]
 LastLogListing=PIE
