--- a/docs/Project/KeyStone/Config/DefaultInput.ini
+++ b/docs/Project/KeyStone/Config/DefaultInput.ini
@@ -156,6 +156,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Light Attack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightShoulder)
 +ActionMappings=(ActionName="Ability3",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Three)
 +ActionMappings=(ActionName="Ability4",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Four)
++ActionMappings=(ActionName="LockOn",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
