Inserted item structure and item

--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -157,7 +157,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Tanner/Levels
 ContentBrowserTab1.SelectedPaths=/Game/MedievalDungeon/Maps
 ContentBrowserTab1.SelectedPaths=/Game/Tanner/MainMenu
 ContentBrowserTab1.SelectedPaths=/Game/Tanner/MainMenu
-ContentBrowserTab1.SelectedPaths=/Game/JoeTe/Content/ThirdPersonBP/InventorySystem/Item
+ContentBrowserTab1.SelectedPaths=
 None=======
 None=======
 None=======
@@ -221,7 +221,6 @@ None=======
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/JoeTe/Content/ThirdPersonBP/InventorySystem/Item/Item.Item
 
 [ContentBrowserRecent]
 MRUItem0=/Game/JoeTe/Content/ThirdPersonBP/InventorySystem/Item/Item
@@ -2310,7 +2309,7 @@ ScreenPosition=X=174.000 Y=149.000
 ScreenPosition=X=-25.000 Y=191.000
 ScreenPosition=X=174.000 Y=149.000
 ScreenPosition=X=39.000 Y=131.000
-ScreenPosition=X=261.600 Y=199.200
+ScreenPosition=X=57.600 Y=180.000
 None=======
 None=======
 None=======
@@ -2326,7 +2325,7 @@ ParticleModule="\"Object.Orientation.RollPitchYawRange.Distribution\" "
 ParticleModuleTypeDataMesh="\"Object.Orientation.RollPitchYawRange.Distribution\" "
 ParticleModuleTypeDataBase="\"Object.Orientation.RollPitchYawRange.Distribution\" "
 WindowSize=X=1281.000 Y=721.000
-WindowSize=X=1312.000 Y=752.000
+WindowSize=X=1313.600 Y=753.600
 InitiallyMaximized=False
 InitiallyMaximized=False
 
