--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -157,7 +157,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Tanner/Levels
 ContentBrowserTab1.SelectedPaths=/Game/MedievalDungeon/Maps
 ContentBrowserTab1.SelectedPaths=/Game/Tanner/MainMenu
 ContentBrowserTab1.SelectedPaths=/Game/Tanner/MainMenu
-ContentBrowserTab1.SelectedPaths=
+ContentBrowserTab1.SelectedPaths=/Game/JoeTe/ThirdPersonBP/InventorySystem
 None=======
 None=======
 None=======
@@ -220,7 +220,7 @@ LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 None=======
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/JoeTe/ThirdPersonBP/InventorySystem/ItemStructure
@@ -2312,7 +2312,7 @@ ScreenPosition=X=174.000 Y=149.000
 ScreenPosition=X=-25.000 Y=191.000
 ScreenPosition=X=174.000 Y=149.000
 ScreenPosition=X=39.000 Y=131.000
-ScreenPosition=X=57.600 Y=180.000
+ScreenPosition=X=-138.400 Y=815.200
 None=======
 None=======
 None=======
@@ -2328,7 +2328,7 @@ ParticleModule="\"Object.Orientation.RollPitchYawRange.Distribution\" "
 ParticleModuleTypeDataMesh="\"Object.Orientation.RollPitchYawRange.Distribution\" "
 ParticleModuleTypeDataBase="\"Object.Orientation.RollPitchYawRange.Distribution\" "
 WindowSize=X=1281.000 Y=721.000
-WindowSize=X=1313.600 Y=753.600
+WindowSize=X=1315.200 Y=724.000
 InitiallyMaximized=False
 InitiallyMaximized=False
 
