--- a/docs/Project/KeyStone/Config/DefaultInput.ini
+++ b/docs/Project/KeyStone/Config/DefaultInput.ini
@@ -155,7 +155,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Heavy Attack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightTrigger)
 +ActionMappings=(ActionName="Light Attack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightShoulder)
 +ActionMappings=(ActionName="Ability3",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Three)
-+ActionMappings=(ActionName="Ability4",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Four)
++ActionMappings=(ActionName="Ability4",bShift=True,bCtrl=False,bAlt=False,bCmd=False,Key=Four)
 +ActionMappings=(ActionName="LockOn",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
 +ActionMappings=(ActionName="Sprint",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +ActionMappings=(ActionName="Inventory",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
