Created fix for roll. Added Heavy attack rotation and removed jump. Reset default map

--- a/docs/Project/KeyStone/Config/DefaultEngine.ini
+++ b/docs/Project/KeyStone/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=KeyStone
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+EditorStartupMap=/Game/NEW_DungeonLevel_TEST.NEW_DungeonLevel_TEST
+GameDefaultMap=/Game/NEW_DungeonLevel_TEST.NEW_DungeonLevel_TEST
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
