Started SaveSlot Renaming Functionality

--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -65,7 +65,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=351,Y=272)
+NewWindowPosition=(X=0,Y=0)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -94,15 +94,15 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=710,Y=446)
+LastSize=(X=1910,Y=1006)
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-R2HUGEF
 LastExecutedLaunchName=DESKTOP-R2HUGEF
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-NewWindowWidth=710
-NewWindowHeight=446
-MultipleInstancePositions=(X=351,Y=272)
+NewWindowWidth=1910
+NewWindowHeight=1006
+MultipleInstancePositions=(X=0,Y=0)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -165,7 +165,7 @@ ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Tanner/MainMenu/Images
 ContentBrowserTab1.SelectedPaths=/Game/Tanner/MainMenu/Images
 ContentBrowserTab1.SelectedPaths=/Game/Tanner/MainMenu/Images
-ContentBrowserTab1.SelectedPaths=/Game/Tanner/MainMenu/Widgets
+ContentBrowserTab1.SelectedPaths=/Game/Tanner/MainMenu
 None=======
 None=======
 None=======
@@ -262,41 +262,35 @@ None=======
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/MedievalDungeon/Blueprints/BP_EndLevel.BP_EndLevel
-OpenAssetsAtExit=/Game/Tanner/SaveGame/MySaveGame.MySaveGame
-OpenAssetsAtExit=/Game/Player.Player
-OpenAssetsAtExit=/Game/ThirdPersonBP/InventorySystem/Item/rockPlayer.rockPlayer
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode
-OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/SaveWidget.SaveWidget
-OpenAssetsAtExit=/Engine/EditorBlueprintResources/StandardMacros.StandardMacros
-OpenAssetsAtExit=/Game/Tanner/MainMenu/BluePrints/BP_checkpoint.BP_checkpoint
-OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/LoadWidget.LoadWidget
-OpenAssetsAtExit=/Game/Alexis/AI/KnightAI_BP.KnightAI_BP
-OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/OptionsMenuWidget.OptionsMenuWidget
-OpenAssetsAtExit=/Game/Tanner/Pause_Menu/PauseMenuWidget.PauseMenuWidget
 OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/ControlsWidget.ControlsWidget
+OpenAssetsAtExit=/Game/MedievalDungeon/Blueprints/BP_EndLevel.BP_EndLevel
+OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/MainMenuWidget.MainMenuWidget
+OpenAssetsAtExit=/Game/Tanner/Pause_Menu/PauseMenuWidget.PauseMenuWidget
+OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/SaveWidget.SaveWidget
+OpenAssetsAtExit=/Game/Tanner/SaveGame/MySaveGame.MySaveGame
+OpenAssetsAtExit=/Game/Tanner/MainMenu/MyGameInstance.MyGameInstance
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Tanner/MainMenu/Widgets/ControlsWidget
-MRUItem1=/Game/Tanner/Pause_Menu/PauseMenuWidget
-MRUItem2=/Game/Tanner/MainMenu/Widgets/OptionsMenuWidget
-MRUItem3=/Game/Alexis/AI/KnightAI_BP
-MRUItem4=/Game/Tanner/MainMenu/Widgets/LoadWidget
-MRUItem5=/Game/Tanner/MainMenu/BluePrints/BP_checkpoint
-MRUItem6=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem7=/Game/Tanner/MainMenu/Widgets/SaveWidget
-MRUItem8=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem9=/Game/ThirdPersonBP/InventorySystem/Item/rockPlayer
-MRUItem10=/Game/Player
-MRUItem11=/Game/Tanner/SaveGame/MySaveGame
-MRUItem12=/Game/MedievalDungeon/Blueprints/BP_EndLevel
-MRUItem13=/Game/DungeonTESTLevel1
-MRUItem14=/Game/ThirdPersonBP/InventorySystem/Interact_Interface
-MRUItem15=/Game/ThirdPersonBP/InventorySystem/Item/Item
-MRUItem16=/Game/ThirdPersonBP/InventorySystem/InventoryComponent
-MRUItem17=/Game/ThirdPersonBP/InventorySystem/Item/Item_herb
-MRUItem18=/Game/ThirdPersonBP/InventorySystem/ItemStructure
-MRUItem19=/Game/ThirdPersonBP/InventorySystem/Containers/Chest_2
+MRUItem0=/Game/Tanner/MainMenu/MyGameInstance
+MRUItem1=/Game/Tanner/SaveGame/MySaveGame
+MRUItem2=/Game/Tanner/MainMenu/Widgets/SaveWidget
+MRUItem3=/Game/Tanner/Pause_Menu/PauseMenuWidget
+MRUItem4=/Game/Tanner/MainMenu/Widgets/MainMenuWidget
+MRUItem5=/Game/MedievalDungeon/Blueprints/BP_EndLevel
+MRUItem6=/Game/Tanner/MainMenu/Widgets/ControlsWidget
+MRUItem7=/Game/DungeonTESTLevel1
+MRUItem8=/Game/Tanner/MainMenu/Widgets/OptionsMenuWidget
+MRUItem9=/Game/Alexis/AI/KnightAI_BP
+MRUItem10=/Game/Tanner/MainMenu/Widgets/LoadWidget
+MRUItem11=/Game/Tanner/MainMenu/BluePrints/BP_checkpoint
+MRUItem12=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem13=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem14=/Game/ThirdPersonBP/InventorySystem/Item/rockPlayer
+MRUItem15=/Game/Player
+MRUItem16=/Game/ThirdPersonBP/InventorySystem/Interact_Interface
+MRUItem17=/Game/ThirdPersonBP/InventorySystem/Item/Item
+MRUItem18=/Game/ThirdPersonBP/InventorySystem/InventoryComponent
+MRUItem19=/Game/ThirdPersonBP/InventorySystem/Item/Item_herb
 
 [DetailCategories]
 ThirdPersonGameMode_C.Tick=True
@@ -2327,6 +2321,17 @@ ControlsWidget_C.Accessibility=True
 ControlsWidget_C.Clipping=True
 ControlsWidget_C.Navigation=True
 ControlsWidget_C.Localization=True
+EditableText.Layout=True
+EditableText.Content=True
+EditableText.Appearance=True
+EditableText.Accessibility=True
+EditableText.Behavior=True
+EditableText.Render Transform=True
+EditableText.Performance=True
+EditableText.Clipping=True
+EditableText.Navigation=True
+EditableText.Localization=True
+EditableText.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode=0
@@ -2546,7 +2551,7 @@ None=======
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[36]\" "
 Object="\"Object.PlrLocation\" "
-Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" "
+Object=
 None=======
 None=======
 None=======
@@ -2566,7 +2571,7 @@ Character=
 Pawn=
 EditorAnimSegment="\"Object.Montage.AnimSegment\" "
 EditorAnimBaseObj="\"Object.Montage.AnimSegment\" "
-Player_C="\"Object.SaveObjRef\" "
+Player_C=
 RotateOwnerAN_C="\"Object.MaxPossibleRotation\" "
 AnimNotify="\"Object.MaxPossibleRotation\" "
 ThirdPersonCharacter_C=
@@ -2596,27 +2601,27 @@ MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance
 PrimitiveComponent=
 SceneComponent=
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
-Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
 ThirdPersonGameMode_C="\"Object.Level Save Object\" "
 GameModeBase="\"Object.Level Save Object\" "
 Info=
-PauseMenuWidget_C="\"Object.LoadRef\" "
+PauseMenuWidget_C="\"Object.ControlsRef\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
-MySaveGame_C="\"Object.CollectedPickups\" "
-SaveGame="\"Object.CollectedPickups\" "
+MySaveGame_C="\"Object.Save1CustomName\" "
+SaveGame="\"Object.Save1CustomName\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
-PanelWidget="\"Object.Layout.Slot\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
 LoadWidget_C=
 SaveWidget_C=
-MyGameInstance_C="\"Object.PointerToSaveInd\" "
-GameInstance="\"Object.PointerToSaveInd\" "
+MyGameInstance_C="\"Object.Save3CustomName\" "
+GameInstance="\"Object.Save3CustomName\" "
 Coin_BP_C=
 SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent=
@@ -2636,7 +2641,7 @@ UpgradeTree2_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
 Item_C=
 InventoryComponent_C="\"Object.Inventory\" "
 InventoryWindow_C="\"Object.Inventory\" "
-BP_EndLevel_C="\"Object.Level_List\" "
+BP_EndLevel_C=
 BP_Cell_Door_Openable_C="\"Object.Door Open\" "
 Chest_2_C="\"Object.InitLodRot\" "
 KnightController_C=
@@ -2656,6 +2661,7 @@ BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.
 Item_herb_C=
 AddToStack="\"Struct.CurrentQuantity\" "
 ControlsWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
+EditableText="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Font\" \"Object.Layout.Slot\" "
 
 [RootWindow]
 ScreenPosition=X=174.000 Y=149.000
