AbilityUI improvements and third UpgradeTree

--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -165,7 +165,7 @@ ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Tanner/MainMenu/Images
 ContentBrowserTab1.SelectedPaths=/Game/Tanner/MainMenu/Images
 ContentBrowserTab1.SelectedPaths=/Game/Tanner/MainMenu/Images
-ContentBrowserTab1.SelectedPaths=/Game/Tanner/MainMenu
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 None=======
 None=======
@@ -256,37 +256,31 @@ ContentBrowserTab2.CurrentViewType=1
 [EditorStartup]
 LastLevel=/Game/Maps/Dummy
 LastLevel=/Game/MedievalDungeon/Maps/DungeonLevel
-LastLevel=/Game/DungeonTESTLevel1
+LastLevel=/Game/NEW_DungeonLevel_TEST
 None=======
 None=======
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/ControlsWidget.ControlsWidget
-OpenAssetsAtExit=/Game/MedievalDungeon/Blueprints/BP_EndLevel.BP_EndLevel
-OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/MainMenuWidget.MainMenuWidget
-OpenAssetsAtExit=/Game/Tanner/Pause_Menu/PauseMenuWidget.PauseMenuWidget
-OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/SaveWidget.SaveWidget
-OpenAssetsAtExit=/Game/Tanner/SaveGame/MySaveGame.MySaveGame
-OpenAssetsAtExit=/Game/Tanner/MainMenu/MyGameInstance.MyGameInstance
+OpenAssetsAtExit=/Game/Player.Player
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Tanner/MainMenu/MyGameInstance
-MRUItem1=/Game/Tanner/SaveGame/MySaveGame
-MRUItem2=/Game/Tanner/MainMenu/Widgets/SaveWidget
-MRUItem3=/Game/Tanner/Pause_Menu/PauseMenuWidget
-MRUItem4=/Game/Tanner/MainMenu/Widgets/MainMenuWidget
-MRUItem5=/Game/MedievalDungeon/Blueprints/BP_EndLevel
-MRUItem6=/Game/Tanner/MainMenu/Widgets/ControlsWidget
-MRUItem7=/Game/DungeonTESTLevel1
-MRUItem8=/Game/Tanner/MainMenu/Widgets/OptionsMenuWidget
-MRUItem9=/Game/Alexis/AI/KnightAI_BP
-MRUItem10=/Game/Tanner/MainMenu/Widgets/LoadWidget
-MRUItem11=/Game/Tanner/MainMenu/BluePrints/BP_checkpoint
-MRUItem12=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem13=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem14=/Game/ThirdPersonBP/InventorySystem/Item/rockPlayer
-MRUItem15=/Game/Player
+MRUItem0=/Game/Player
+MRUItem1=/Game/Tanner/MainMenu/MyGameInstance
+MRUItem2=/Game/Tanner/SaveGame/MySaveGame
+MRUItem3=/Game/Tanner/MainMenu/Widgets/SaveWidget
+MRUItem4=/Game/Tanner/Pause_Menu/PauseMenuWidget
+MRUItem5=/Game/Tanner/MainMenu/Widgets/MainMenuWidget
+MRUItem6=/Game/MedievalDungeon/Blueprints/BP_EndLevel
+MRUItem7=/Game/Tanner/MainMenu/Widgets/ControlsWidget
+MRUItem8=/Game/DungeonTESTLevel1
+MRUItem9=/Game/Tanner/MainMenu/Widgets/OptionsMenuWidget
+MRUItem10=/Game/Alexis/AI/KnightAI_BP
+MRUItem11=/Game/Tanner/MainMenu/Widgets/LoadWidget
+MRUItem12=/Game/Tanner/MainMenu/BluePrints/BP_checkpoint
+MRUItem13=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem14=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem15=/Game/ThirdPersonBP/InventorySystem/Item/rockPlayer
 MRUItem16=/Game/ThirdPersonBP/InventorySystem/Interact_Interface
 MRUItem17=/Game/ThirdPersonBP/InventorySystem/Item/Item
 MRUItem18=/Game/ThirdPersonBP/InventorySystem/InventoryComponent
@@ -2332,6 +2326,7 @@ EditableText.Clipping=True
 EditableText.Navigation=True
 EditableText.Localization=True
 EditableText.Events=True
+Player_C.Ability3UpgradeTree=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode=0
@@ -2601,13 +2596,13 @@ MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance
 PrimitiveComponent=
 SceneComponent=
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
-Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
+Widget="\"Object.UpgradeArray3\" "
+Visual="\"Object.UpgradeArray3\" "
 ThirdPersonGameMode_C="\"Object.Level Save Object\" "
 GameModeBase="\"Object.Level Save Object\" "
 Info=
 PauseMenuWidget_C="\"Object.ControlsRef\" "
-UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
+UserWidget="\"Object.UpgradeArray3\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
@@ -2637,7 +2632,7 @@ CreditWidget_C="\"Object.CreditsMP\" "
 CanvasPanel="\"Object.Layout.Slot\" "
 BP_checkpoint_C=
 VerticalBox="\"Object.Layout.Slot\" "
-UpgradeTree2_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
+UpgradeTree2_C="\"Object.UpgradeArray3\" "
 Item_C=
 InventoryComponent_C="\"Object.Inventory\" "
 InventoryWindow_C="\"Object.Inventory\" "
