--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,13 +134,13 @@ MRUItem0=/Game/DungeonTESTLevel1
 MRUItem1=/Game/MedievalDungeon/Maps/DungeonLevel
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/MedievalDungeon/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
-ContentBrowserTab1.VerticalSplitter.SlotSize0=0.559735
-ContentBrowserTab1.VerticalSplitter.SlotSize1=0.440265
+ContentBrowserTab1.VerticalSplitter.SlotSize0=0.389422
+ContentBrowserTab1.VerticalSplitter.SlotSize1=0.610579
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000
@@ -157,25 +157,42 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+ContentBrowserTab2.SourcesExpanded=False
+ContentBrowserTab2.Locked=False
+ContentBrowserTab2.VerticalSplitter.SlotSize0=0.250000
+ContentBrowserTab2.VerticalSplitter.SlotSize1=0.750000
+ContentBrowserTab2.FavoriteSplitter.SlotSize0=0.200000
+ContentBrowserTab2.FavoriteSplitter.SlotSize1=0.800000
+ContentBrowserTab2.FavoriteSplitter.SlotSize2=0.400000
+ContentBrowserTab2.ActiveTypeFilters=
+ContentBrowserTab2.EnabledTypeFilters=
+ContentBrowserTab2.ActiveFrontendFilters=
+ContentBrowserTab2.EnabledFrontendFilters=
+ContentBrowserTab2.SelectedPaths=/Game
+ContentBrowserTab2.PluginFilters=
+ContentBrowserTab2.Favorites.SelectedPaths=
+ContentBrowserTab2.CollectionsExpanded=True
+ContentBrowserTab2.SelectedCollections=
+ContentBrowserTab2.ExpandedCollections=
+ContentBrowserTab2.ViewMode=0
+ContentBrowserTab2.ThumbnailSizeScale=0.180000
+ContentBrowserTab2.CurrentViewType=1
 
 [EditorStartup]
 LastLevel=/Game/DungeonTESTLevel1
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Player.Player
-OpenAssetsAtExit=/Game/InventorySystem/UI/InventorySlotWG.InventorySlotWG
-OpenAssetsAtExit=/Game/InventorySystem/InventoryInst.InventoryInst
-OpenAssetsAtExit=/Game/InventorySystem/UI/InventoryWG.InventoryWG
 
 [ContentBrowserRecent]
-MRUItem0=/Game/InventorySystem/UI/InventoryWG
-MRUItem1=/Game/InventorySystem/InteractInterface
-MRUItem2=/Game/InventorySystem/InventoryInst
-MRUItem3=/Game/InventorySystem/UI/InventorySlotWG
-MRUItem4=/Game/Player
-MRUItem5=/Game/DungeonTESTLevel1
+MRUItem0=/Game/DungeonTESTLevel1
+MRUItem1=/Game/Player
+MRUItem2=/Game/InventorySystem/UI/InventoryWG
+MRUItem3=/Game/InventorySystem/InteractInterface
+MRUItem4=/Game/InventorySystem/InventoryInst
+MRUItem5=/Game/InventorySystem/UI/InventorySlotWG
 MRUItem6=/Game/MedievalDungeon/Blueprints/WorkingChest5
 MRUItem7=/Game/MedievalDungeon/Blueprints/WorkingChest4
 MRUItem8=/Game/MedievalDungeon/Blueprints/WorkingChest3
@@ -584,9 +601,9 @@ Widget="\"Object.InventorySlotArray\" "
 Visual="\"Object.InventorySlotArray\" "
 InventoryComponent_C="\"Object.Default.Inventory\" \"Object.Default.Inventory.Inventory[0]\" \"Object.Default.Inventory.Inventory[0].ItemStructure_2_49E80B77418358766F9244BBBE94D70A\" "
 ActorComponent=
-Player_C="\"Object.Inventory\" "
-Character="\"Object.Inventory\" "
-Pawn="\"Object.Inventory\" "
+Player_C=
+Character=
+Pawn=
 MySaveGame_C="\"Object.PlrLocation\" "
 SaveGame="\"Object.PlrLocation\" "
 InventoryWG_C="\"Object.InventorySlotArray\" "
@@ -606,8 +623,8 @@ PropertyWrapper.Variable=False
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
-WindowSize=X=1283.200 Y=723.200
-InitiallyMaximized=False
+WindowSize=X=1283.000 Y=723.000
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
