--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -135,7 +135,7 @@ MRUItem1=/Game/NEW_DungeonLevel_TEST
 MRUItem2=/Game/MedievalDungeon/Maps/DungeonLevel
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Tanner
+ContentBrowserTab1.SelectedPaths=/Game/Tanner/MainMenu/Widgets
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -169,7 +169,7 @@ ContentBrowserTab2.ActiveTypeFilters=
 ContentBrowserTab2.EnabledTypeFilters=
 ContentBrowserTab2.ActiveFrontendFilters=
 ContentBrowserTab2.EnabledFrontendFilters=
-ContentBrowserTab2.SelectedPaths=/Game
+ContentBrowserTab2.SelectedPaths=/Game/InventorySystem/UI
 ContentBrowserTab2.PluginFilters=
 ContentBrowserTab2.Favorites.SelectedPaths=
 ContentBrowserTab2.CollectionsExpanded=True
@@ -187,16 +187,15 @@ CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Player.Player
 OpenAssetsAtExit=/Game/InventorySystem/UI/InventorySlotWG.InventorySlotWG
-OpenAssetsAtExit=/Game/Tanner/SaveGame/MySaveGame.MySaveGame
 OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/SaveWidget.SaveWidget
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Tanner/MainMenu/Widgets/SaveWidget
-MRUItem1=/Game/Tanner/SaveGame/MySaveGame
-MRUItem2=/Game/InventorySystem/UI/InventoryWG
-MRUItem3=/Game/InventorySystem/UI/InventorySlotWG
-MRUItem4=/Game/DungeonTESTLevel1
-MRUItem5=/Game/Player
+MRUItem1=/Game/InventorySystem/UI/InventorySlotWG
+MRUItem2=/Game/Player
+MRUItem3=/Game/DungeonTESTLevel1
+MRUItem4=/Game/Tanner/SaveGame/MySaveGame
+MRUItem5=/Game/InventorySystem/UI/InventoryWG
 MRUItem6=/Game/InventorySystem/InteractInterface
 MRUItem7=/Game/InventorySystem/InventoryInst
 MRUItem8=/Game/MedievalDungeon/Blueprints/WorkingChest5
@@ -634,16 +633,16 @@ WorkingChest1_C=
 ManaPotion_C=
 InventoryInst_C="\"Object.InventoryData\" "
 GameInstance="\"Object.InventoryData\" "
-Object="\"Object.DestroyPickups\" "
+Object=
 InventorySlotWG_C=
 UserWidget=
 Widget=
 Visual=
 InventoryComponent_C="\"Object.Default.Inventory\" \"Object.Default.Inventory.Inventory[0]\" \"Object.Default.Inventory.Inventory[0].ItemStructure_2_49E80B77418358766F9244BBBE94D70A\" "
 ActorComponent=
-Player_C="\"Object.SaveObjRef\" "
-Character="\"Object.SaveObjRef\" "
-Pawn="\"Object.SaveObjRef\" "
+Player_C=
+Character=
+Pawn=
 MySaveGame_C="\"Object.DestroyPickups\" "
 SaveGame="\"Object.DestroyPickups\" "
 InventoryWG_C=
