Tried New Inventory Save Method - Still Not Working

--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -135,7 +135,7 @@ MRUItem1=/Game/NEW_DungeonLevel_TEST
 MRUItem2=/Game/MedievalDungeon/Maps/DungeonLevel
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Tanner/MainMenu/Widgets
+ContentBrowserTab1.SelectedPaths=/Game/InventorySystem
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -169,7 +169,7 @@ ContentBrowserTab2.ActiveTypeFilters=
 ContentBrowserTab2.EnabledTypeFilters=
 ContentBrowserTab2.ActiveFrontendFilters=
 ContentBrowserTab2.EnabledFrontendFilters=
-ContentBrowserTab2.SelectedPaths=/Game/InventorySystem/UI
+ContentBrowserTab2.SelectedPaths=/Game/InventorySystem/Consumables
 ContentBrowserTab2.PluginFilters=
 ContentBrowserTab2.Favorites.SelectedPaths=
 ContentBrowserTab2.CollectionsExpanded=True
@@ -188,28 +188,30 @@ SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Player.Player
 OpenAssetsAtExit=/Game/InventorySystem/UI/InventorySlotWG.InventorySlotWG
 OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/SaveWidget.SaveWidget
+OpenAssetsAtExit=/Game/Tanner/SaveGame/MySaveGame.MySaveGame
+OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/LoadWidget.LoadWidget
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Tanner/MainMenu/Widgets/SaveWidget
-MRUItem1=/Game/InventorySystem/UI/InventorySlotWG
-MRUItem2=/Game/Player
-MRUItem3=/Game/DungeonTESTLevel1
-MRUItem4=/Game/Tanner/SaveGame/MySaveGame
-MRUItem5=/Game/InventorySystem/UI/InventoryWG
-MRUItem6=/Game/InventorySystem/InteractInterface
-MRUItem7=/Game/InventorySystem/InventoryInst
-MRUItem8=/Game/MedievalDungeon/Blueprints/WorkingChest5
-MRUItem9=/Game/MedievalDungeon/Blueprints/WorkingChest4
-MRUItem10=/Game/MedievalDungeon/Blueprints/WorkingChest3
-MRUItem11=/Game/InventorySystem/Chest/ChestBP
-MRUItem12=/Game/InventorySystem/Chest/WorkingChest1
-MRUItem13=/Game/MedievalDungeon/Blueprints/WorkingChest2
-MRUItem14=/Game/InventorySystem/Consumables/ManaPotion
-MRUItem15=/Game/MedievalDungeon/Maps/DungeonLevel
-MRUItem16=/Game/MedievalDungeon/Blueprints/Chest_5
-MRUItem17=/Game/MedievalDungeon/Blueprints/Chest_4
-MRUItem18=/Game/MedievalDungeon/Blueprints/Chest_3
-MRUItem19=/Game/MedievalDungeon/Blueprints/Chest_2
+MRUItem0=/Game/Tanner/MainMenu/Widgets/LoadWidget
+MRUItem1=/Game/InventorySystem/Consumables/HealthPotion
+MRUItem2=/Game/Tanner/SaveGame/MySaveGame
+MRUItem3=/Game/Tanner/MainMenu/Widgets/SaveWidget
+MRUItem4=/Game/InventorySystem/UI/InventorySlotWG
+MRUItem5=/Game/Player
+MRUItem6=/Game/DungeonTESTLevel1
+MRUItem7=/Game/InventorySystem/UI/InventoryWG
+MRUItem8=/Game/InventorySystem/InteractInterface
+MRUItem9=/Game/InventorySystem/InventoryInst
+MRUItem10=/Game/MedievalDungeon/Blueprints/WorkingChest5
+MRUItem11=/Game/MedievalDungeon/Blueprints/WorkingChest4
+MRUItem12=/Game/MedievalDungeon/Blueprints/WorkingChest3
+MRUItem13=/Game/InventorySystem/Chest/ChestBP
+MRUItem14=/Game/InventorySystem/Chest/WorkingChest1
+MRUItem15=/Game/MedievalDungeon/Blueprints/WorkingChest2
+MRUItem16=/Game/InventorySystem/Consumables/ManaPotion
+MRUItem17=/Game/MedievalDungeon/Maps/DungeonLevel
+MRUItem18=/Game/MedievalDungeon/Blueprints/Chest_5
+MRUItem19=/Game/MedievalDungeon/Blueprints/Chest_4
 
 [DetailCategories]
 BP_Openable_Door_C.TransformCommon=True
@@ -558,6 +560,22 @@ SaveWidget_C.Accessibility=True
 SaveWidget_C.Clipping=True
 SaveWidget_C.Navigation=True
 SaveWidget_C.Localization=True
+HealthPotion_C.Tick=True
+HealthPotion_C.Default=True
+LoadWidget_C.Default=True
+LoadWidget_C.Appearance=True
+LoadWidget_C.Designer=True
+LoadWidget_C.Input=True
+LoadWidget_C.Interaction=True
+LoadWidget_C.Performance=True
+LoadWidget_C.Layout=True
+LoadWidget_C.Behavior=True
+LoadWidget_C.Render Transform=True
+LoadWidget_C.Accessibility=True
+LoadWidget_C.Clipping=True
+LoadWidget_C.Navigation=True
+LoadWidget_C.Localization=True
+K2Node_InputAction.Input=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/MedievalDungeon/Blueprints/WorkingChest5.WorkingChest5;
@@ -590,6 +608,7 @@ RecentlyPlaced=/Game/MedievalDungeon/Blueprints/Chest_2.Chest_2;
 /Game/InventorySystem/Consumables/ManaPotion.ManaPotion=1
 /Game/InventorySystem/InteractInterface.InteractInterface=0
 /Game/InventorySystem/UI/InventoryWG.InventoryWG=0
+/Game/InventorySystem/Consumables/HealthPotion.HealthPotion=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -635,17 +654,18 @@ InventoryInst_C="\"Object.InventoryData\" "
 GameInstance="\"Object.InventoryData\" "
 Object=
 InventorySlotWG_C=
-UserWidget=
-Widget=
-Visual=
+UserWidget="\"Object.SlotName\" "
+Widget="\"Object.SlotName\" "
+Visual="\"Object.SlotName\" "
 InventoryComponent_C="\"Object.Default.Inventory\" \"Object.Default.Inventory.Inventory[0]\" \"Object.Default.Inventory.Inventory[0].ItemStructure_2_49E80B77418358766F9244BBBE94D70A\" "
 ActorComponent=
-Player_C=
-Character=
-Pawn=
+Player_C="\"Object.SaveObjRef\" "
+Character="\"Object.SaveObjRef\" "
+Pawn="\"Object.SaveObjRef\" "
 MySaveGame_C="\"Object.DestroyPickups\" "
 SaveGame="\"Object.DestroyPickups\" "
 InventoryWG_C=
+LoadWidget_C="\"Object.SlotName\" "
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=True
@@ -1667,4 +1687,5 @@ K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.
 InventoryWG_C=
 K2Node_CustomEvent=
 UseDropWG_C=
+LoadWidget_C=
 
