Mostly Saved Inventory With One Main Glitch

--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -135,7 +135,7 @@ MRUItem1=/Game/NEW_DungeonLevel_TEST
 MRUItem2=/Game/MedievalDungeon/Maps/DungeonLevel
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/InventorySystem
+ContentBrowserTab1.SelectedPaths=/Game/Tanner/MainMenu/Widgets
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -186,19 +186,18 @@ LastLevel=/Game/DungeonTESTLevel1
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Player.Player
+OpenAssetsAtExit=/Game/Tanner/SaveGame/MySaveGame.MySaveGame
 OpenAssetsAtExit=/Game/InventorySystem/UI/InventorySlotWG.InventorySlotWG
 OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/SaveWidget.SaveWidget
-OpenAssetsAtExit=/Game/Tanner/SaveGame/MySaveGame.MySaveGame
-OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/LoadWidget.LoadWidget
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Tanner/MainMenu/Widgets/LoadWidget
-MRUItem1=/Game/InventorySystem/Consumables/HealthPotion
+MRUItem0=/Game/Tanner/MainMenu/Widgets/SaveWidget
+MRUItem1=/Game/InventorySystem/UI/InventorySlotWG
 MRUItem2=/Game/Tanner/SaveGame/MySaveGame
-MRUItem3=/Game/Tanner/MainMenu/Widgets/SaveWidget
-MRUItem4=/Game/InventorySystem/UI/InventorySlotWG
-MRUItem5=/Game/Player
-MRUItem6=/Game/DungeonTESTLevel1
+MRUItem3=/Game/Player
+MRUItem4=/Game/DungeonTESTLevel1
+MRUItem5=/Game/Tanner/MainMenu/Widgets/LoadWidget
+MRUItem6=/Game/InventorySystem/Consumables/HealthPotion
 MRUItem7=/Game/InventorySystem/UI/InventoryWG
 MRUItem8=/Game/InventorySystem/InteractInterface
 MRUItem9=/Game/InventorySystem/InventoryInst
@@ -654,14 +653,14 @@ InventoryInst_C="\"Object.InventoryData\" "
 GameInstance="\"Object.InventoryData\" "
 Object=
 InventorySlotWG_C=
-UserWidget="\"Object.SlotName\" "
-Widget="\"Object.SlotName\" "
-Visual="\"Object.SlotName\" "
+UserWidget=
+Widget=
+Visual=
 InventoryComponent_C="\"Object.Default.Inventory\" \"Object.Default.Inventory.Inventory[0]\" \"Object.Default.Inventory.Inventory[0].ItemStructure_2_49E80B77418358766F9244BBBE94D70A\" "
 ActorComponent=
-Player_C="\"Object.SaveObjRef\" "
-Character="\"Object.SaveObjRef\" "
-Pawn="\"Object.SaveObjRef\" "
+Player_C="\"Object.PointerToMapIntAdd\" "
+Character="\"Object.PointerToMapIntAdd\" "
+Pawn="\"Object.PointerToMapIntAdd\" "
 MySaveGame_C="\"Object.DestroyPickups\" "
 SaveGame="\"Object.DestroyPickups\" "
 InventoryWG_C=
@@ -681,7 +680,7 @@ K2Node_VariableGet.Variable=True
 PropertyWrapper.Variable=False
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=180.000
+ScreenPosition=X=967.000 Y=188.000
 WindowSize=X=1283.000 Y=723.000
 InitiallyMaximized=True
 
