--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -130,9 +130,9 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/NEW_DungeonLevel_TEST
-MRUItem1=/Game/DungeonTESTLevel1
-MRUItem2=/Game/MedievalDungeon/Maps/DungeonLevel
+MRUItem0=/Game/MedievalDungeon/Maps/DungeonLevel
+MRUItem1=/Game/NEW_DungeonLevel_TEST
+MRUItem2=/Game/DungeonTESTLevel1
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Tanner/MainMenu
@@ -180,39 +180,37 @@ ContentBrowserTab2.ThumbnailSizeScale=0.180000
 ContentBrowserTab2.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/NEW_DungeonLevel_TEST
+LastLevel=/Game/MedievalDungeon/Maps/DungeonLevel
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Player.Player
-OpenAssetsAtExit=/Game/Tanner/SaveGame/MySaveGame.MySaveGame
-OpenAssetsAtExit=/Game/InventorySystem/Consumables/StaminaPotion.StaminaPotion
-OpenAssetsAtExit=/Game/Alexis/AI/KnightAI_BP.KnightAI_BP
-OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/LoadWidget.LoadWidget
 OpenAssetsAtExit=/Game/Tanner/MainMenu/MyGameInstance.MyGameInstance
+OpenAssetsAtExit=/Game/Tanner/SaveGame/MySaveGame.MySaveGame
+OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/SaveWidget.SaveWidget
+OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/LoadWidget.LoadWidget
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Tanner/MainMenu/MyGameInstance
-MRUItem1=/Game/NEW_DungeonLevel_TEST
-MRUItem2=/Game/DungeonTESTLevel1
-MRUItem3=/Game/Tanner/MainMenu/Widgets/LoadWidget
-MRUItem4=/Game/Alexis/AI/KnightAI_BP
-MRUItem5=/Game/InventorySystem/Consumables/StaminaPotion
-MRUItem6=/Game/Tanner/SaveGame/MySaveGame
-MRUItem7=/Game/Player
-MRUItem8=/Game/Tanner/MainMenu/Widgets/SaveWidget
-MRUItem9=/Game/InventorySystem/UI/InventorySlotWG
-MRUItem10=/Game/InventorySystem/Consumables/HealthPotion
-MRUItem11=/Game/InventorySystem/UI/InventoryWG
-MRUItem12=/Game/InventorySystem/InteractInterface
-MRUItem13=/Game/InventorySystem/InventoryInst
-MRUItem14=/Game/MedievalDungeon/Blueprints/WorkingChest5
-MRUItem15=/Game/MedievalDungeon/Blueprints/WorkingChest4
-MRUItem16=/Game/MedievalDungeon/Blueprints/WorkingChest3
-MRUItem17=/Game/InventorySystem/Chest/ChestBP
-MRUItem18=/Game/InventorySystem/Chest/WorkingChest1
-MRUItem19=/Game/MedievalDungeon/Blueprints/WorkingChest2
+MRUItem0=/Game/Tanner/MainMenu/Widgets/LoadWidget
+MRUItem1=/Game/Tanner/MainMenu/Widgets/SaveWidget
+MRUItem2=/Game/Tanner/SaveGame/MySaveGame
+MRUItem3=/Game/Tanner/MainMenu/MyGameInstance
+MRUItem4=/Game/MedievalDungeon/Maps/DungeonLevel
+MRUItem5=/Game/NEW_DungeonLevel_TEST
+MRUItem6=/Game/DungeonTESTLevel1
+MRUItem7=/Game/Alexis/AI/KnightAI_BP
+MRUItem8=/Game/InventorySystem/Consumables/StaminaPotion
+MRUItem9=/Game/Player
+MRUItem10=/Game/InventorySystem/UI/InventorySlotWG
+MRUItem11=/Game/InventorySystem/Consumables/HealthPotion
+MRUItem12=/Game/InventorySystem/UI/InventoryWG
+MRUItem13=/Game/InventorySystem/InteractInterface
+MRUItem14=/Game/InventorySystem/InventoryInst
+MRUItem15=/Game/MedievalDungeon/Blueprints/WorkingChest5
+MRUItem16=/Game/MedievalDungeon/Blueprints/WorkingChest4
+MRUItem17=/Game/MedievalDungeon/Blueprints/WorkingChest3
+MRUItem18=/Game/InventorySystem/Chest/ChestBP
+MRUItem19=/Game/InventorySystem/Chest/WorkingChest1
 
 [DetailCategories]
 BP_Openable_Door_C.TransformCommon=True
@@ -707,14 +705,17 @@ Widget=
 Visual=
 InventoryComponent_C="\"Object.Default.Inventory\" \"Object.Default.Inventory.Inventory[0]\" \"Object.Default.Inventory.Inventory[0].ItemStructure_2_49E80B77418358766F9244BBBE94D70A\" "
 ActorComponent=
-Player_C=
-Character=
-Pawn=
-MySaveGame_C=
-SaveGame=
+Player_C="\"Object.SaveObjRef\" "
+Character="\"Object.SaveObjRef\" "
+Pawn="\"Object.SaveObjRef\" "
+MySaveGame_C="\"Object.Save3Level\" "
+SaveGame="\"Object.Save3Level\" "
 InventoryWG_C=
 LoadWidget_C=
 MyGameInstance_C="\"Object.DungeonLevelName\" "
+PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=True
@@ -1731,7 +1732,7 @@ InventoryInst_C=
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
 InventorySlotWG_C=
 Player_C=
-MySaveGame_C=
+MySaveGame_C=PropertyWrapper.DefaultValueCategory.None,
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
 InventoryWG_C=
 K2Node_CustomEvent=
